--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,7 @@
 </head>
 <body style="background-color: rgb(56, 12, 12);">
     <h1>Welcome to HomePage </h1>
+    <h2><a href="{{ url_for('predict_datapoint') }}">Predict marks for Students</a></p>
+    </h2>
 </body>
 </html>
